--- a/client/src/comps/CircularProgressCard/circularProgressCard.module.css
+++ b/client/src/comps/CircularProgressCard/circularProgressCard.module.css
@@ -9,3 +9,35 @@
     padding: 30px 20px !important;
   }
 }
+
+.tooltipContainer {
+  position: relative;
+  cursor: pointer;
+}
+
+.tooltip {
+  position: absolute;
+  /* right: 0;
+  top: calc(100% + 10px); */
+  color: black;
+  padding: 28px 25px;
+  z-index: 1;
+  display: none;
+  width: 426px;
+  border-radius: 16px;
+  border: px solid rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.95);
+  box-shadow: 0px 32px 32px -24px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4px);
+}
+
+.tooltipContainer:hover .tooltip {
+  display: block;
+}
+
+.tooltipContent {
+  color: #000;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+}
