--- a/client/src/comps/CircularProgressCard/circularProgressCard.module.css
+++ b/client/src/comps/CircularProgressCard/circularProgressCard.module.css
@@ -17,13 +17,13 @@
 
 .tooltip {
   position: absolute;
-  /* right: 0;
-  top: calc(100% + 10px); */
+  right: 0;
+  top: calc(100% + 10px);
   color: black;
   padding: 28px 25px;
   z-index: 1;
   display: none;
-  width: 426px;
+  width: 280px;
   border-radius: 16px;
   border: px solid rgba(255, 255, 255, 0.7);
   background: rgba(255, 255, 255, 0.95);
