--- a/client/src/Pages/companyView/companyView.module.css
+++ b/client/src/Pages/companyView/companyView.module.css
@@ -19,12 +19,12 @@
   width: 50%;
 }
 
-.factorRow {
+.flexRow {
   flex-wrap: wrap;
   margin: 0 -20px -23px;
 }
 
-.factorCol {
+.flexCol {
   padding: 0 20px 23px;
   width: 25%;
 }
